Revert "fix sculpture height collapse"
This reverts commit 8416b273f9df64250a2e2e64e207fe6c826ec5e0.

--- a/src/main.css
+++ b/src/main.css
@@ -505,7 +505,6 @@ footer p {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  height: 50rem;
 }
 .carousel * {
   transition: all 0.33s ease-in-out;
@@ -570,14 +569,13 @@ footer p {
   flex-direction: row;
   justify-content: space-between;
   align-self: center;
-  width: 60%;
+  width: 40%;
 }
 .carousel .carousel-dots div {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1rem;
+  height: 1rem;
   border-radius: 50%;
   background-color: var(--medium-purple);
-  cursor: pointer;
 }
 .carousel .carousel-dots div.carousel-dots-active {
   background-color: var(--light-purple);
