--- a/src/scss/layout/_carousel.scss
+++ b/src/scss/layout/_carousel.scss
@@ -3,8 +3,6 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  height: 50rem;
-
   * {
     transition: all 0.33s ease-in-out;
   }
@@ -68,13 +66,12 @@
     flex-direction: row;
     justify-content: space-between;
     align-self: center;
-    width: 60%;
+    width: 40%;
     div {
-      width: 1.5rem;
-      height: 1.5rem;
+      width: 1rem;
+      height: 1rem;
       border-radius: 50%;
       background-color: var(--medium-purple);
-      cursor: pointer;
       &.carousel-dots-active {
         background-color: var(--light-purple);
         scale: 1.33;
